--- a/HW 11/landing.html
+++ b/HW 11/landing.html
@@ -20,10 +20,10 @@
 
             <div class = "col-12 col-md-4">
                 <h1>Visualizations</h1>
-                <a href="./visualization-image-1.html"> <img src="C:/Users/Walid/Documents/Columbia/Homeworks/HW 11/Resources/assets/images/Fig1.png" alt="Lattitude vs Max Temp." height = "150" width ="150"></a>
-                <a href="./visualization-image-2.html"> <img src="C:/Users/Walid/Documents/Columbia/Homeworks/HW 11/Resources/assets/images/Fig2.png" alt="Lattitude vs Humidity." height = "150" width ="150" ></a>
-                <a href="./visualization-image-3.html"> <img src="C:/Users/Walid/Documents/Columbia/Homeworks/HW 11/Resources/assets/images/Fig3.png" alt="Lattitude vs Cloudiness." height = "150" width ="150" ></a>
-                <a href="./visualization-image-4.html"> <img src="C:/Users/Walid/Documents/Columbia/Homeworks/HW 11/Resources/assets/images/Fig4.png" alt="Lattitude vs Wind Speed." height = "150" width ="150" ></a>
+                <a href="./visualization-page-1.html"> <img src="C:/Users/Walid/Documents/Columbia/Homeworks/HW 11/Resources/assets/images/Fig1.png" alt="Lattitude vs Max Temp." height = "150" width ="150"></a>
+                <a href="./visualization-page-2.html"> <img src="C:/Users/Walid/Documents/Columbia/Homeworks/HW 11/Resources/assets/images/Fig2.png" alt="Lattitude vs Humidity." height = "150" width ="150" ></a>
+                <a href="./visualization-page-3.html"> <img src="C:/Users/Walid/Documents/Columbia/Homeworks/HW 11/Resources/assets/images/Fig3.png" alt="Lattitude vs Cloudiness." height = "150" width ="150" ></a>
+                <a href="./visualization-page-4.html"> <img src="C:/Users/Walid/Documents/Columbia/Homeworks/HW 11/Resources/assets/images/Fig4.png" alt="Lattitude vs Wind Speed." height = "150" width ="150" ></a>
             </div>
         </div>
      </body>
